Remove multipliers from row class's column gap property. I can't remember what these were for and they appear to have fixed part of the issue without any obvious new bugs

--- a/src/Grid.scss
+++ b/src/Grid.scss
@@ -22,8 +22,8 @@ $grid_arr: (
     width:100%;
 
     column-gap: $grid_gutter; //change property from "column-gap" to "grid-gap" if you want vertical margin between rows
-    @media (min-width: $screen_viewport_sm) { column-gap: calc(#{$grid_gutter} * 1.5); }
-    @media (min-width: $screen_viewport_md) { column-gap: calc(#{$grid_gutter} * 2) !important; }
+    @media (min-width: $screen_viewport_sm) { column-gap: calc(#{$grid_gutter}); }
+    @media (min-width: $screen_viewport_md) { column-gap: calc(#{$grid_gutter}) !important; }
 }
 
 [class^="col-"], [class*=" col-"] { grid-column-start: span 12; }
